--- a/manager/static/src/sass/variables/_config.sass
+++ b/manager/static/src/sass/variables/_config.sass
@@ -1,7 +1,7 @@
 // ##[00]-TYPE STUFF
 
 $fontSize			:	16px
-$sans-serif 		: 	'Roboto', 'Tahoma', sans-serif
+$sans-serif 		: 	'Raleway', 'Tahoma', sans-serif
 
 
 
